--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -236,7 +236,7 @@
                     <li><strong>Auto captures</strong> your notes in an instant for seamless digitization in the App!</li>
                     <li><strong>OCR</strong> effortlessly converts your handwritten notes into digital text with exceptional accuracy! </li>
                 </ul>
-                <p><a href="app.html" class="btn">Explore</a></p>
+                <p><a href="{% url 'welcome' %}" class="btn">Explore</a></p>
             </div>
         </div>
     </div>
