--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Start Header/Navigation -->
-<nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark fixed-top" aria-label="Furni navigation bar">
+<nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark " aria-label="Furni navigation bar">
     <div class="container">
         <a class="navbar-brand" href="{% url 'index' %}">
             <img src="{% static 'images/ReNoteAI_logo.svg' %}" alt="ReNoteAI" class="navbar-logo">
