--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -123,6 +123,27 @@
     <script src="{% static 'js/tiny-slider.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
 
+    <!-- LinkedIn Insight Tag -->
+
+    <script type="text/javascript">
+        _linkedin_partner_id = "6771084";
+        window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+        window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+    </script>
+    <script type="text/javascript">
+        (function(l) {
+            if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+            window.lintrk.q=[]}
+            var s = document.getElementsByTagName("script")[0];
+            var b = document.createElement("script");
+            b.type = "text/javascript";b.async = true;
+            b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+            s.parentNode.insertBefore(b, s);})(window.lintrk);
+    </script>
+    <noscript>
+        <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=6771084&fmt=gif" />
+    </noscript>
+
     <!-- WhatsApp Floating Icon -->
     <a href="https://wa.me/+918886663326" target="_blank" class="whatsapp-float">
         <img src="{% static 'images/whatsapp.svg' %}" alt="WhatsApp" class="whatsapp-icon">
