--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 
   <!-- Start Hero Section -->
-  <div class="hero">
+  <!-- <div class="hero">
     <div class="background-wrap">
       <img src="{% static 'images/campaign_poster.png' %}" alt="ReNoteAI" class="background-wrap">
     </div>
@@ -20,7 +20,24 @@
     <div class="container hero-content">
       <div class="row justify-content-center text-center">
         <div class="col-lg-8">
-          <!-- Content here if needed -->
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="hero-standard">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-5">
+          <div class="intro-excerpt">
+            <h1>Smart Reusable Notebooks</h1>
+            <p class="hero-text">Explore with ReNoteAI the perfect blend of Handwritten Style and Digital Convenience to simplify your life.</p>
+          </div>
+        </div>
+        <div class="col-lg-7">
+          <div class="hero-img-wrap">
+            <img src="{% static 'images/Air.png' %}" class="img-fluid" alt="Product Image">
+          </div>
         </div>
       </div>
     </div>
