--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -40,21 +40,21 @@
           <a class="product-item" href="{% url 'products' %}">
             <img src="{% static 'images/Craft.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 248px;">
             <h3 class="product-title">Eco</h3>
-            <strong class="product-price">₹ 799.00</strong>
+            <!-- <strong class="product-price">₹ 799.00</strong> -->
           </a>
         </div>
         <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
           <a class="product-item" href="{% url 'products' %}">
             <img src="{% static 'images/Lite.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 232px;">
             <h3 class="product-title">Lite</h3>
-            <strong class="product-price">₹ 999.00</strong>
+            <!-- <strong class="product-price">₹ 999.00</strong> -->
           </a>
         </div>
         <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
           <a class="product-item" href="{% url 'products' %}">
             <img src="{% static 'images/Air.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 267px;">
             <h3 class="product-title">Air</h3>
-            <strong class="product-price">₹ 1499.00</strong>
+            <!-- <strong class="product-price">₹ 1499.00</strong> -->
           </a>
         </div>
       </div>
