--- a/pages/templates/products.html
+++ b/pages/templates/products.html
@@ -31,7 +31,7 @@
           <a class="product-item" href="#">
             <img src="{% static 'images/Craft.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 248px;">
             <h3 class="product-title">Eco</h3>
-            <strong class="product-price">₹ 799.00</strong>
+            <!-- <strong class="product-price">₹ 799.00</strong> -->
           </a>
         </div>
         <!-- End Column 1 -->
@@ -41,7 +41,7 @@
           <a class="product-item" href="#">
             <img src="{% static 'images/Lite.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 232px;">
             <h3 class="product-title">Lite</h3>
-            <strong class="product-price">₹ 999.00</strong>
+            <!-- <strong class="product-price">₹ 999.00</strong> -->
           </a>
         </div>
         <!-- End Column 2 -->
@@ -51,7 +51,7 @@
           <a class="product-item" href="#">
             <img src="{% static 'images/Air.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 267px;">
             <h3 class="product-title">Air</h3>
-            <strong class="product-price">₹ 1499.00</strong>
+            <!-- <strong class="product-price">₹ 1499.00</strong> -->
           </a>
         </div>
         <!-- End Column 3 -->
@@ -61,7 +61,7 @@
           <a class="product-item" href="#">
             <img src="{% static 'images/Classic.png' %}" class="img-fluid product-thumbnail" style="height: 350.27px; width: 262px;">
             <h3 class="product-title">Classic</h3>
-            <strong class="product-price">₹ 1499.00</strong>
+            <!-- <strong class="product-price">₹ 1499.00</strong> -->
 
           </a>
         </div>
